--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -9,6 +9,9 @@
     <body>
         <header>
         </header>
+
+        test
+
         <footer>
             <p>Best School</p>
         </footer>
