update header CSS and adding logo in header

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -8,9 +8,8 @@
     </head>
     <body>
         <header>
+            <img src="images/logo.png" alt="AiRBnB logo">
         </header>
-
-        test
 
         <footer>
             <p>Best School</p>
