--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>AirBnB</title>
     </head>
     <body style="margin: 0;
                     padding: 0;">
