--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>
+            AirBnB
+        </title>
         <style>
             body{
                 margin: 0;
