--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>AirBnB</title>
         <link rel="stylesheet" href="styles/3-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
@@ -10,7 +9,14 @@
     <body>
         <header>
         </header>
+        <div class="container">
 
+        </div>
+        <section class="filters">
+        </section>
+        <button>
+            
+        </button>
         <footer>
             <p>Best School</p>
         </footer>
