--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -9,13 +9,13 @@
     <body>
         <header>
         </header>
-        <div class="container">
-
-        </div>
         <section class="filters">
+            <div class="container">
+
+            </div>
         </section>
         <button>
-            
+            Search
         </button>
         <footer>
             <p>Best School</p>
