--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>AirBnB</title>
         <link rel="stylesheet" href="styles/4-common.css">
         <link rel="stylesheet" href="styles/4-filters.css">
         <link rel="stylesheet" href="styles/4-header.css">
@@ -12,7 +13,7 @@
         </header>
         <div class="container">
             <section class="filters">
-                <button>
+                <button class="search_button">
                     Search
                 </button>
             </section>
