update syule for v5

--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -13,6 +13,14 @@
         </header>
         <div class="container">
             <section class="filters">
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>London, Dubai, ...</h4>
+                </div>
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Hotels, Resorts Blog, ...</h4>
+                </div>
                 <button class="search_button">
                     Search
                 </button>
