--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/6-filters.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="stylesheet" href="styles/7-places.css">
+        <link rel="stylesheet" href="styles/8-places.css">
         <link rel="icon" href="images/icon.png">
     </head>
     <body>
@@ -51,6 +51,24 @@
                 <h1>Places</h1>
                 <article class="place">
                     <h2>My Home</h2>
+                    <div class="price_by_night">
+                        80$
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            2 Guests
+                        </div>
+                        <div class="number_rooms">
+                        </div>
+                            1 BedRoom
+                        <div class="number_bathrooms">
+                            1 Bathroom
+                        </div>
+                    </div>
+                    <div class="user">
+                    </div>
+                    <div class="description">
+                    </div>
                 </article>
                 <article class="place">
                     <h2>Tiny House</h2>
