--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -52,29 +52,70 @@
                 <article class="place">
                     <h2>My Home</h2>
                     <div class="price_by_night">
-                        80$
+                        <p>80$</p>
                     </div>
                     <div class="information">
                         <div class="max_guest">
-                            2 Guests
+                            <p>2 Guests</p>
                         </div>
                         <div class="number_rooms">
                         </div>
-                            1 BedRoom
+                            <p>2 Bedrooms</p>
                         <div class="number_bathrooms">
-                            1 Bathroom
+                            <p>1 Bathrooms</p>
                         </div>
                     </div>
                     <div class="user">
+                        <p><strong>Owner:</strong> John Lennon</p>
                     </div>
                     <div class="description">
+                        <p>This is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shangai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</p>
                     </div>
                 </article>
                 <article class="place">
                     <h2>Tiny House</h2>
+                    <div class="price_by_night">
+                        <p>$65</p>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <p>4 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <p>2 Bedrooms</p>
+                        </div>
+                        <div class="number_bathrooms">
+                            <p>2 Bathrooms</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><strong>Owner:</strong> Adrienne Doe</p>
+                    </div>
+                    <div class="description">
+                        <p>This is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shangai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</p>
+                    </div>
                 </article>
                 <article class="place">
                     <h2>A suit</h2>
+                    <div class="price_by_night">
+                        <p>$190</p>
+                    </div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <p>6 Guests</p>
+                        </div>
+                        <div class="number_rooms">
+                            <p>3 Bedrooms</p>
+                        </div>
+                        <div class="number_bathrooms">
+                            <p>2 Bathrooms</p>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><strong>Owner:</strong> John Lennon</p>
+                    </div>
+                    <div class="description">
+                        <p>This
                 </article>
             </section>
         </div>
