--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -115,7 +115,7 @@
                         <p><strong>Owner:</strong> John Lennon</p>
                     </div>
                     <div class="description">
-                        <p>This
+                        <p>This is a lovely 1 bedroom and 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shangai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</p>
                 </article>
             </section>
         </div>
